Blender 2.8 hangs when the LookDev mode is enabled #58280

Closed
opened 2018-11-30 08:05:10 +01:00 by Leonid · 5 comments

System Information
Operating system:
Kubuntu 18.04 LTS, x64 (nvidia-driver-390)
Graphics card:
NVIDIA GeForce GTX 1080

Blender Version
Broken:
2.80, 26d6a3625ed, blender2.8, 2018-11-29

Short description of error
Blender hangs when the LookDev mode is enabled in this scene. It specifically hangs because of the material chrome.001.
bug.blend

**System Information** Operating system: Kubuntu 18.04 LTS, x64 (nvidia-driver-390) Graphics card: NVIDIA GeForce GTX 1080 **Blender Version** Broken: 2.80, 26d6a3625ed, blender2.8, 2018-11-29 **Short description of error** Blender hangs when the **LookDev** mode is enabled in this scene. It specifically hangs because of the material **chrome.001**. [bug.blend](https://archive.blender.org/developer/F5764734/bug.blend)
Author

Added subscriber: @ljonya

Added subscriber: @ljonya
Leonid changed title from Blender hangs when the LookDev mode is enabled to Blender 2.8 hangs when the LookDev mode is enabled 2018-11-30 08:08:32 +01:00
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-11-30 12:16:22 +01:00
Member

Confirmed.

It's a pretty complex nodegroup setup (at least 5 nested levels), cycles can render it fine it seems...

@fclem: could you check on this?

Confirmed. It's a pretty complex nodegroup setup (at least 5 nested levels), cycles can render it fine it seems... @fclem: could you check on this?

This issue was referenced by 65779b022d

This issue was referenced by 65779b022dc14e4dff107e925817968fc93570f1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58280
No description provided.