Fix T58280: Blender 2.8 hangs when the LookDev mode is enabled

The hang was due to the nodes being "evaluated" for every incomming link.

Solution: only evaluate once per nodetree.

Also merge the tagging of SSS and SSR into one traversal only.